--- a/index.htm
+++ b/index.htm
@@ -6,30 +6,30 @@
     <meta name="viewport" id="metaViewport" content="user-scalable=no, initial-scale=1, width=device-width, viewport-fit=cover" data-tdv-general-scale="0.5"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <link rel="shortcut icon" href="favicon.ico?v=1664423445616">
-	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1664423445616">
-	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1664423445616">
-	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1664423445616">
-	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1664423445616">
-	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1664423445616">
-	<link rel="manifest" href="manifest.json?v=1664423445616">
-	<meta name="msapplication-TileColor" content="#FFFFFF">
+    <link rel="shortcut icon" href="favicon.ico?v=1664493986346">
+	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1664493986346">
+	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1664493986346">
+	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1664493986346">
+	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1664493986346">
+	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1664493986346">
+	<link rel="manifest" href="manifest.json?v=1664493986346">
+	<meta name="msapplication-TileColor" content="#B77D82">
 	<meta name="msapplication-config" content="browserconfig.xml">
-	<link rel="preload" href="locale/pt.txt?v=1664423445616" as="fetch" crossorigin="anonymous"/>
-	<link rel="preload" href="script.js?v=1664423445616" as="script"/>
-	<link rel="preload" href="media/panorama_77DD010C_7D29_E616_4192_196D4237F36A_0/r/2/0_0.jpg?v=1664423445616" as="image"/>
-	<link rel="preload" href="media/panorama_77DD010C_7D29_E616_4192_196D4237F36A_0/l/2/0_0.jpg?v=1664423445616" as="image"/>
-	<link rel="preload" href="media/panorama_77DD010C_7D29_E616_4192_196D4237F36A_0/u/2/0_0.jpg?v=1664423445616" as="image"/>
-	<link rel="preload" href="media/panorama_77DD010C_7D29_E616_4192_196D4237F36A_0/d/2/0_0.jpg?v=1664423445616" as="image"/>
-	<link rel="preload" href="media/panorama_77DD010C_7D29_E616_4192_196D4237F36A_0/f/2/0_0.jpg?v=1664423445616" as="image"/>
-	<link rel="preload" href="media/panorama_77DD010C_7D29_E616_4192_196D4237F36A_0/b/2/0_0.jpg?v=1664423445616" as="image"/>
+	<link rel="preload" href="locale/pt.txt?v=1664493986346" as="fetch" crossorigin="anonymous"/>
+	<link rel="preload" href="script.js?v=1664493986346" as="script"/>
+	<link rel="preload" href="media/panorama_77DD010C_7D29_E616_4192_196D4237F36A_0/r/2/0_0.jpg?v=1664493986346" as="image"/>
+	<link rel="preload" href="media/panorama_77DD010C_7D29_E616_4192_196D4237F36A_0/l/2/0_0.jpg?v=1664493986346" as="image"/>
+	<link rel="preload" href="media/panorama_77DD010C_7D29_E616_4192_196D4237F36A_0/u/2/0_0.jpg?v=1664493986346" as="image"/>
+	<link rel="preload" href="media/panorama_77DD010C_7D29_E616_4192_196D4237F36A_0/d/2/0_0.jpg?v=1664493986346" as="image"/>
+	<link rel="preload" href="media/panorama_77DD010C_7D29_E616_4192_196D4237F36A_0/f/2/0_0.jpg?v=1664493986346" as="image"/>
+	<link rel="preload" href="media/panorama_77DD010C_7D29_E616_4192_196D4237F36A_0/b/2/0_0.jpg?v=1664493986346" as="image"/>
 	<meta name="description" content="Gastronomy, drinks n’ music"/>
-	<meta name="theme-color" content="#FFFFFF"/>
-    <script src="lib/tdvplayer.js?v=1664423445616"></script>
-    <script src="script.js?v=1664423445616"></script>
+	<meta name="theme-color" content="#B77D82"/>
+    <script src="lib/tdvplayer.js?v=1664493986346"></script>
+    <script src="script.js?v=1664493986346"></script>
     <script type="text/javascript">
         var tour;
-        var devicesUrl = {"mobile":"script_mobile.js?v=1664423445616","general":"script_general.js?v=1664423445616"};
+        var devicesUrl = {"general":"script_general.js?v=1664493986346","mobile":"script_mobile.js?v=1664493986346"};
 
         (function()
         {
@@ -72,9 +72,9 @@
 
             var settings = new TDV.PlayerSettings();
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1664423445616');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1664423445616');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1664423445616');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1664493986346');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1664493986346');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1664493986346');
 
             tour = new TDV.Tour(settings, devicesUrl);
             tour.bind(TDV.Tour.EVENT_TOUR_INITIALIZED, onVirtualTourInit);
@@ -318,12 +318,12 @@
         .fill-viewport.landscape-left { left: env(safe-area-inset-left); }
         .fill-viewport.landscape-right { right: env(safe-area-inset-right); }
         #viewer { z-index:1; }
-        #preloadContainer { z-index:2; opacity:0; background-color:rgba(255,255,255,1); transition: opacity 0.5s; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s;}
+        #preloadContainer { z-index:2; opacity:0; background-color:rgba(183,125,130,1); transition: opacity 0.5s; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s;}
     </style>
-    <link rel="stylesheet" href="fonts.css?v=1664423445616">
+    <link rel="stylesheet" href="fonts.css?v=1664493986346">
 </head>
 <body>
-    <div id="preloadContainer" class="fill-viewport"><div style="z-index: 4; position: absolute; left: 0%; top: 50%; width: 100.00%; height: 10.00%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;font-size:1.6666666666666663vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-size:1.67vmin;font-family:Arial, Helvetica, sans-serif;">Loading virtual tour. Please wait...</SPAN></DIV></div></div></div>
+    <div id="preloadContainer" class="fill-viewport"><div style="z-index: 4; position: absolute; background-image: url('loading/HTMLImage_84096460_8B46_7752_41AA_468BE5505DBE.png'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 35.03717472118959%; top: 13.41506129597198%; width: 29.93%; height: 41.51%"></div><div style="z-index: 5; position: absolute; left: 0%; top: 52.968476357267946%; width: 100.00%; height: 14.19%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;font-size:2.9772329246935203vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#000000;font-size:2.98vmin;"><B>Seja bem Vindo ao nosso Tour Virtual</B></SPAN></SPAN></DIV><DIV STYLE="text-align:center;font-size:2.9772329246935203vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#000000;font-size:2.98vmin;"><B>Instagram </B></SPAN><SPAN STYLE="color:#ffffff;font-size:2.98vmin;"><B>@291rooftop</B></SPAN></SPAN></DIV><p STYLE="margin:0; line-height:2.98vmin;"><BR STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-size:1.67vmin;font-family:Arial, Helvetica, sans-serif;"/></p></div></div></div>
     <div id="viewer" class="fill-viewport"></div>
 </body>
 </html>
